# mktool

./: .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: check_portability.rs  check_shlibs.rs  checkshlibs.rs  checksum.rs  ctfconvert.rs  digest.rs  distinfo.rs  fetch.rs  main.rs  makesum.rs  symlinks.rs
src/check_shlibs/: elf.rs  macho.rs
tests/: check_shlibs_macos.rs  checksum.rs  digest.rs  distinfo.rs  fetch.rs  symlinks.rs
tests/data/: digest1.txt  digest2.txt  distinfo  distinfo.bad  distinfo.dists  patch-Makefile
