[package]
name = "mktool"
description = "General purpose utility to enhance pkgsrc/mk infrastructure"
version = "1.4.2"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
readme = "README.md"
keywords = ["pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/mktool"
homepage = "https://github.com/jperkin/mktool"
documentation = "https://docs.rs/mktool"
rust-version = "1.74.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2.4"
elf = "0.8.0"
glob = "0.3.2"
goblin = "0.10.0"
indicatif = "0.18.0"
pkgsrc = "0.4.1"
rayon = "1.10.0"
regex = "1.11.0"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "rustls-tls"] }
suppaftp = "6.3.0"
thiserror = "2.0.12"
url = "2.5.4"
walkdir = "2.5.0"
