[package]
name = "mktool"
description = "General purpose utility to enhance pkgsrc/mk infrastructure"
version = "1.4.3"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
readme = "README.md"
keywords = ["pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/mktool"
homepage = "https://github.com/jperkin/mktool"
documentation = "https://docs.rs/mktool"
rust-version = "1.85.1"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2.4"
elf = "0.8.0"
glob = "0.3.3"
goblin = "0.10.1"
indicatif = "0.18.0"
pkgsrc = "0.4.2"
rayon = "1.11.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
suppaftp = "6.3.0"
thiserror = "2.0.16"
url = "2.5.7"
walkdir = "2.5.0"
