[package]
name = "mktool"
description = "General purpose utility to enhance pkgsrc/mk infrastructure"
version = "1.5.2"
authors = ["Jonathan Perkin <jonathan@perkin.org.uk>"]
readme = "README.md"
keywords = ["pkgsrc"]
license = "ISC"
repository = "https://github.com/jperkin/mktool"
homepage = "https://github.com/jperkin/mktool"
documentation = "https://docs.rs/mktool"
rust-version = "1.85.1"
edition = "2024"

[features]
default = ["webpki-roots"]
webpki-roots = ["dep:rustls", "dep:webpki-roots"]
native-certs = []

[dependencies]
clap = { version = "4", features = ["derive"] }
content_inspector = "0.2.4"
elf = "0.8.0"
glob = "0.3.3"
goblin = "0.10.4"
indicatif = "0.18.3"
pkgsrc = "0.8.0"
rayon = "1.11.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "rustls"] }
rustls = { version = "0.23", optional = true }
webpki-roots = { version = "1", optional = true }
suppaftp = "8.0.1"
thiserror = "2.0.18"
url = "2.5.8"
walkdir = "2.5.0"
